trunk/Archive2/80/cd6f3dd5127b35/output
main.cpp:9:9: error: no enum named 'E' in 'B'
enum B::E : int { x = 2 };
     ~~~^
1 error generated.
