trunk/Archive2/80/cd6f3dd5127b35/main.cpp
#include <iostream>

struct A {
    enum E : int;
};

struct B : A {};

enum B::E : int { x = 2 };

int main()
{ 
}